--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body {
 
 .welcome {
   min-height: 600px;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,7 +126,7 @@ body {
   background-color: #282936;
   background-image: url("./img/welcome-bg.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: bottom -15vw center;
 }
 
 .welcome__heading {
